[package]
name = "star_swap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.4.0"
sha2 = "0.10.8"
solana-program = "1.18.11"
spl-token = {version = "4.0.1", features = ["no-entrypoint"]}
thiserror = "1.0.60"

[lib]
name = "star_swap"
crate-type = ["cdylib", "lib"]
